# dictation

./: .gitignore  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
main/: AndroidManifest.xml
main/assets/: server.p12
main/cpp/: CMakeLists.txt  jni_bridge.cpp
main/java/com/dictation/server/: DictationApp.kt  InklingNative.kt  SharedScreens.kt
main/java/com/dictation/server/audio/: AudioRecorder.kt  SherpaSocketEngine.kt
main/java/com/dictation/server/bluetooth/: BluetoothAudioRouter.kt
main/java/com/dictation/server/core/: AppPrefs.kt  MarkdownDocument.kt  MarkdownRangeSelection.kt  TextChunker.kt
main/java/com/dictation/server/llm/: LlmBridge.kt  SseLlmBridge.kt
main/java/com/dictation/server/model/: QueueItem.kt  RelayMessage.kt
main/java/com/dictation/server/net/: HttpJson.kt
main/java/com/dictation/server/relay/: PluginBroadcastBridge.kt  RelayInboxStore.kt
main/java/com/dictation/server/service/: DictationService.kt
main/java/com/dictation/server/ui/: Eink.kt
main/java/com/dictation/server/ws/: DictationWebSocketClient.kt  DictationWebSocketServer.kt
main/res/values/: flags.xml  strings.xml  themes.xml
main/res/values-zh/: strings.xml
phone/java/com/dictation/server/: MainActivity.kt
relay/: AndroidManifest.xml
relay/java/com/dictation/server/: ContentSelectionPane.kt  InboxScreens.kt  InklingSettings.kt  MainActivity.kt  MarkdownView.kt  MessageDetailActivity.kt
relay/res/values/: flags.xml  themes.xml
test/java/com/dictation/server/core/: MarkdownDocumentTest.kt  MarkdownRangeSelectionTest.kt
